@@ -1,3 +1,14 @@
+Fri Jun  2 13:33:19 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tests/Big_Twoways/server.cpp:
+          Fixed a minor memory leak caused by not cleaning up servants.
+
+        * tests/CodeSets/libs/UCS4_UTF16/WUCS4_UTF16.cpp:
+          Addressed compiler warnings generated by some platforms with
+          2-byte wchars. This codeset translator should only be used on
+          hosts with 4-byte wchars, since UCS4 is a 32-bit codeset, but
+          not all of the test platforms meet that criterium.
+
 Fri Jun  2 12:36:58 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>
 
         * tao/TAO_Internal.cpp:
